crates/php-parser/tests/snapshots/integration__errorhandling_recovery_5.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "test",
          "params": [],
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Binary": {
                      "left": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 28,
                          "end": 29
                        }
                      },
                      "op": "Add",
                      "right": {
                        "kind": "Error",
                        "span": {
                          "start": 32,
                          "end": 33
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 28,
                    "end": 33
                  }
                }
              },
              "span": {
                "start": 28,
                "end": 32
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 33
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 33
  }
}
