crates/php-parser/tests/snapshots/integration__errorhandling_recovery_7.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "i"
                },
                "span": {
                  "start": 7,
                  "end": 9
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 0
                },
                "span": {
                  "start": 12,
                  "end": 13
                }
              }
            }
          },
          "span": {
            "start": 7,
            "end": 13
          }
        }
      },
      "span": {
        "start": 7,
        "end": 15
      }
    },
    {
      "kind": {
        "While": {
          "condition": {
            "kind": "Error",
            "span": {
              "start": 22,
              "end": 23
            }
          },
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Assign": {
                          "target": {
                            "kind": {
                              "Variable": "j"
                            },
                            "span": {
                              "start": 30,
                              "end": 32
                            }
                          },
                          "op": "Assign",
                          "value": {
                            "kind": {
                              "Int": 1
                            },
                            "span": {
                              "start": 35,
                              "end": 36
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 30,
                        "end": 36
                      }
                    }
                  },
                  "span": {
                    "start": 30,
                    "end": 38
                  }
                }
              ]
            },
            "span": {
              "start": 24,
              "end": 39
            }
          }
        }
      },
      "span": {
        "start": 15,
        "end": 39
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "k"
                },
                "span": {
                  "start": 40,
                  "end": 42
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 2
                },
                "span": {
                  "start": 45,
                  "end": 46
                }
              }
            }
          },
          "span": {
            "start": 40,
            "end": 46
          }
        }
      },
      "span": {
        "start": 40,
        "end": 123
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 123
  }
}
